# kaggle_nlp

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
kaggle_nlp/: main.ipynb  main.py  predict_test.py
kaggle_nlp/utils/: utilities.py
tests/: test_utilities.py
