[tool.poetry]
name = "kaggle-nlp"
version = "0.1.0"
description = ""
authors = ["Vasilii Tokarev <notsoyunng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
transformers = "^4.47.1"
datasets = "^3.2.0"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
